# media-lens

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pg_dump.sql  pg_snapshot_fixed.sql  pyproject.toml
src/: go.mod  go.sum  pyproject.toml
src/01_ingestion/: Dockerfile  go.mod  go.sum
src/01_ingestion/cmd/ingestion/: main.go
src/01_ingestion/cmd/ingestor/: main.go
src/01_ingestion/cmd/insertion/: main.go
src/01_ingestion/cmd/worker/: main.go
src/02_processing/common/: app_logger.py  db_connector.py
src/02_processing/sectioning/: Dockerfile  main.py
src/02_processing/silver/: processor.py  pyproject.toml
src/02_processing/silver/scripts/: init_minio.py
src/02_processing/silver_enriched/: Dockerfile  pyproject.toml
src/02_processing/silver_enriched/emotion_analyser/: __init__.py  emotion_analyser.py  emotion_analyser_config.json  emotion_config.py  emotion_label_catalog.py  exec_emotion_analyser.py  minio_utils.py  output_emotion_analyser.json
src/02_processing/silver_enriched/fact_checker/: __init__.py  exec_fact_checker.py  fact_checker_config.json  fact_checker_config.py  fact_checker_core.py  output_factchecker.json
src/02_processing/silver_enriched/pgvector_writer/: pgvector_writer.py
src/02_processing/silver_enriched/processing/: 00_pipeline_processing_runner.py  01_pipeline_text_summarizer.py  __init__.py  pipeline_utils.py
src/02_processing/silver_enriched/processing_pipeline/: 00_pipeline_processing_runner.py  01_pipeline_text_summarizer.py  02_pipeline_fact_checker.py  03_pipeline_embedder.py  04_pipeline_emotion_scoring.py  __init__.py  pipeline_utils.py  processing_pipeline_config.json  tempCodeRunnerFile.py
src/02_processing/silver_enriched/qdrant_writer/: qdrant_writer.py
src/02_processing/silver_enriched/text_summarizer/: __init__.py  exec_text_summarizer.py  text_summarizer_config.json  text_summarizer_config.py  text_summarizer_core.py  text_summarizer_test_input.json
src/02_processing/silver_enriched/transcript_embedder/: __init__.py  exec_transcript_embedder.py  transcript_embedder_config.json  transcript_embedder_config.py  transcript_embedder_core.py
src/02_processing/transcription/: Dockerfile  main.go  main.py  pyproject.toml
src/backend/: Dockerfile  Makefile  README.md  go.mod  go.sum
src/backend/cmd/server/: main.go
src/backend/docs/: docs.go  swagger.json  swagger.yaml
src/backend/internal/config/: config.go
src/frontend/: .env.example  Dockerfile  Dockerfile.dev  api-contracts.yml  next.config.ts  package-lock.json  package.json
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/lib/: api.ts  types.ts
src/ingestion/: Dockerfile  go.sum  pyproject.toml
src/internal/db/: episodes.go
src/internal/go/db/: models.go  (+3 more)
src/internal/pcindex/: client.go
src/internal/queue/: redis.go
src/processing/: Dockerfile  db.py  processor.py
storage/: main.py  pyproject.toml
storage/db/: connection.py  episodes.py  import_pg_snapshots.md  init.sql  init_v2.sql  main.py  mock_data_for_processing.sql  pg_snapshot_17062026.sql  podcast.py
storage/db/pg_snapshots/: pg_dump_silver_enriched_19062026
storage/db/pgadmin/: servers.json
storage/db/processed_data/: preprocessing_data.sql
storage/db/test_sql/: truncate_all.sql
storage/tests/: Readme.md  conftest.py  test_db_connection.py  test_episodes.py
(+78 files in other folders)
