[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hiredis>=2.2.0",
    "psycopg[pool]>=3.1.0",
    "psycopg-pool>=3.3.1",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "faster-whisper>=1.0.0",
    "minio>=7.2.0",
    "psycopg-binary>=3.3.4",
    "asyncpg>=0.31.0",
    "transformers>=5.9.0",
    "torch>=2.12.0",
    "sentencepiece>=0.2.1",
    "nltk>=3.9.4",
]
