[project]
name = "storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "psycopg-pool>=3.3.0",
]

[tool.uv.workspace]
members = [
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
