[project]
name = "processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.0.2",
    "minio>=7.2.20",
    "openai-whisper>=20250625",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pyiceberg>=0.11.1",
    "soundfile>=0.13.1",
]
