[project]
name = "processing"
version = "0.1.0"
description = "Processing stage: silver_enriched enrichment pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "ddgs==9.12.1",
    "langchain-core==1.4.0",
    "langchain-google-genai==4.2.4",
    "librosa==0.11.0",
    "minio>=7.2.0",
    "psycopg[pool]>=3.1.0",
    "psycopg-binary>=3.3.4",
    "psycopg-pool>=3.3.1",
    "pydantic>=2.0.0",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
]

[tool.uv]
package = false
