[project]
name = "preprocessing"
version = "0.1.0"
description = "Preprocessing stage: transcription and sectioning workers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncpg>=0.31.0",
    "google-genai>=2.8.0",
    "minio>=7.2.0",
    "nltk>=3.9.4",
    "pydantic>=2.0.0",
]

[tool.uv]
package = false
